last commit exept readme

--- a/static/style/topic.css
+++ b/static/style/topic.css
@@ -184,6 +184,12 @@ ion-icon {
     font-size: 27px;
 }
 
+.date_article {
+    font-size: 15px;
+    color: #9fa1a6;
+    margin-top: 50px;
+}
+
 
 
 
